--- a/index.html
+++ b/index.html
@@ -728,29 +728,30 @@ ul li {
   <h3 class="section-title">Compétences Techniques</h3>
   <div class="section-grid">
     <div class="interest-card">
-      <h4>🔒 Cybersécurité</h4>
-      <p>Spécialisation en cours</p>
+      <h4>🔒 Cybersécurité et Réseaux</h4>
+      <p>Adressage IPv4/IPv6, VLAN, commutation, virtualisation, services réseaux</p>
     </div>
     <div class="interest-card">
       <h4>💾 Base de données</h4>
-      <p>MySQL - Conception relationnelle</p>
+      <p>MySQL - Conception relationnelle </p>
     </div>
     <div class="interest-card">
-      <h4>⚡ Électronique</h4>
-      <p>Arduino - Transmission de données</p>
+      <h4>⚡ Systèmes embarqués</h4>
+      <p>C, Arduino, modélisation UML</p>
     </div>
     <div class="interest-card">
       <h4>💻 Programmation</h4>
-      <p>C++, Python, HTML</p>
+      <p>C++, Python, HTML,JavaScript,PHP, REST/WS</p>
     </div>
     <div class="interest-card">
       <h4>🎨 Design</h4>
-      <p>Fusion 360, Canva</p>
+      <p>Fusion 360, Canva,Visual Paradigm</p>
     </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
       <p>Codage/décodage, ondes</p>
     </div>
+
   </div>
 </div>
 
@@ -894,35 +895,33 @@ ul li {
 <div class="timeline-item sub-project">
     <div class="timeline-dot"></div>
     <div class="timeline-content sub-bubble">
-        <h4>1er projet - Conception et Sécurisation d'une Base de donnée</h4>
-        <p>Modéliser et implémenter une BDD relationnelle robuste et sécurisée</p>
+        <h4>1er projet - Prototype de station météorologique</h4>
+        <p>Conception et programmation en C/Arduino avec modélisation UML</p>
     </div>
 </div>
 
 <div class="timeline-item sub-project">
     <div class="timeline-dot"></div>
     <div class="timeline-content sub-bubble">
-        <h4>2ème projet – Système de communication sécurisée par ondes radio</h4>
-        <p>Développement d'un protocole de transmission chiffrée avec déchiffrement automatisé</p>
+        <h4>2ème projet – Application graphique C++ et base de données</h4>
+        <p>Développement d’une interface en C++ reliée à une base relationnelle</p>
     </div>
 </div>
 
 <div class="timeline-item sub-project">
     <div class="timeline-dot"></div>
     <div class="timeline-content sub-bubble">
-        <h4>3ème projet – Plateforme Interactive de comparaison Automobile</h4>
-        <p>Développer une interface utilisateur sécurisée avec des traitements de données</p>
+        <h4>3ème projet – Simulation de réseaux d’entreprises</h4>
+        <p>Création d’une maquette réseau intégrant VLAN, IPv6 et virtualisation</p>
     </div>
 </div>
 
 <div class="timeline-item sub-project">
     <div class="timeline-dot"></div>
     <div class="timeline-content sub-bubble">
-        <h4>4ème projet – Capteur IoT de Qualité de l'Air</h4>
-        <p>Concevoir un dispositif IoT sécurisé avec analyse de viabilité commerciale</p>
+        <h4>4ème projet – Application web de gestion de stages</h4>
+        <p>Réalisation d’une plateforme web pour centraliser et gérer les offres de stage</p>
     </div>
-</div>
-
 <style>
 /* Style commun pour sous-projets */
 .timeline-item.sub-project {
