--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Omaïma Belgacem - Future Ingénieure Cybersécurité </title>
+  <title>Omaïma Belgacem - Future Ingénieure CESI </title>
   
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -729,7 +729,7 @@ ul li {
   <div class="section-grid">
     <div class="interest-card">
       <h4>🔒 Cybersécurité et Réseaux</h4>
-      <p>Adressage IPv4/IPv6, VLAN, commutation, virtualisation, services réseaux</p>
+      <p>Adressage IPv4/IPv6, VLAN, commutation, virtualisation, services réseaux,Windows,Linux,macOs,Android</p>
     </div>
     <div class="interest-card">
       <h4>💾 Base de données</h4>
@@ -747,6 +747,10 @@ ul li {
       <h4>🎨 Design</h4>
       <p>Fusion 360, Canva,Visual Paradigm</p>
     </div>
+    <div class="skill-category">
+      <h4>🔧Outils& DevOps</h4>
+       <p>GitHub,Netifly,MicrosoftOffice,Teams,Google Scripts</p>
+     </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
       <p>Codage/décodage, ondes</p>
