--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ ul li {
 
        <div class="hero-content">
         <div class="hero-photo">
-        <img src="https://github.com/Omai19/sitegeneral/blob/main/photo.jpg" alt="Ma photo" class="profile-photo">
+        <img src="photo.jpg" alt="Ma photo" class="profile-photo">
         </div>
       <h1 class="hero-title">Omaïma Belgacem</h1>
      <p class="hero-subtitle">
