--- a/index.html
+++ b/index.html
@@ -747,9 +747,9 @@ ul li {
       <h4>🎨 Design</h4>
       <p>Fusion 360, Canva,Visual Paradigm</p>
     </div>
-    <div class="skill-category">
-      <h4>🔧Outils& DevOps</h4>
-       <p>GitHub,Netifly,MicrosoftOffice,Teams,Google Scripts</p>
+  <div class="interest-card">
+      <h4>🔧Outils & DevOps</h4>
+      <p>GitHub,Netifly,MicrosoftOffice,Teams,Google Scripts</p>
      </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
