--- a/index.html
+++ b/index.html
@@ -1131,9 +1131,11 @@ ul li {
 
 </style>     
             
-            <div class="button-container">
-          <a href="mailto:omai.belgacem@gmail.com?subject=Opportunité &body=Bonjour Omaïma,%0D%0A%0D%0ANous avons consulté votre profil et souhaitons échanger avec vous concernant nos opportunités .%0D%0A%0D%0ACordialement" class="cta-button">
-                    🚀 Contactez-moi maintenant
-                </a>
+           <div class="button-container">
+  <a href="mailto:omai.belgacem@gmail.com" class="cta-button">
+    🚀 Contactez-moi maintenant
+  </a>
+</div>
+
             </div>
    
