--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ ul li {
   <!-- Icônes flottantes cybersécurité -->
   <div class="floating-tech" style="top:10%;animation-delay:0s;">🔒</div>
   <div class="floating-tech" style="top:30%;animation-delay:5s;">💻</div>
-  <div class="floating-tech" style="top:50%;animation-delay:10s;">🛡️</div>
+  <div class="floating-tech" style="top:50%;animation-delay:10s;">⌨️</div>
   <div class="floating-tech" style="top:70%;animation-delay:15s;">⚡</div>
 
 
@@ -891,7 +891,7 @@ ul li {
     <div class="timeline-dot"></div>
     <div class="timeline-content">
         <h4>Mes projets en Informatiques 2025</h4>
-        <p>Ensemble des projets réalisés durant ma première année</p>
+        <p>Ensemble des projets réalisés durant mon année année</p>
     </div>
 </div>
 
