--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ ul li {
     <div class="timeline-dot"></div>
     <div class="timeline-content">
         <h4>Mes projets en Informatiques 2025</h4>
-        <p>Ensemble des projets réalisés durant mon année</p>
+        <p>Ensemble des projets réalisés </p>
     </div>
 </div>
 
