--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ ul li {
     </div>
   <div class="interest-card">
       <h4>🔧Outils & DevOps</h4>
-      <p>GitHub,Netifly,MicrosoftOffice,Teams,Google Scripts</p>
+      <p>Visual Studio Code,GitHub,Netifly,MicrosoftOffice,Teams,Google Scripts</p>
      </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
@@ -864,7 +864,7 @@ ul li {
                 <div class="stat-card">
                     <div class="stat-number">🌍</div>
                     <h4>Profil International</h4>
-                    <p>Anglais C1 • Espagnol B1 • Vision globale</p>
+                    <p>Anglais C1 • Espagnol B1 • Arabe langue maternelle • Français langue maternelle • Vision globale</p>
                     <small>Communication multiculturelle</small>
                 </div>
             </div>
