--- a/index.html
+++ b/index.html
@@ -728,32 +728,32 @@ ul li {
   <h3 class="section-title">Compétences Techniques</h3>
   <div class="section-grid">
     <div class="interest-card">
-      <h4>🔒 Cybersécurité et Réseaux</h4>
-      <p>Adressage IPv4/IPv6, VLAN, commutation, virtualisation, services réseaux,Windows,Linux,macOs,Android</p>
+      <h4>🔒 Cybersécurité,Réseaux & Infrastructures</h4>
+      <p>Modèle OSI/TCP-IP,DNS/DHCP/ICMP, IPv4/IPv6,VLAN/NAT/PAT,authentification,sécurisation des accès,routage / commutation,WiFi /Ethernet, Pare-feu / Filtrage,,analyse de vulnérabilités,aopologie réseau ,Windows, Linux, macOS, Android</p>
     </div>
     <div class="interest-card">
       <h4>💾 Base de données</h4>
-      <p>MySQL - Conception relationnelle </p>
+      <p>SQL/MySQL,PDO,sécuritédes données,authentification base,optimisation requêtes,Modélisationre lationnelle</p>
     </div>
     <div class="interest-card">
       <h4>⚡ Systèmes embarqués</h4>
-      <p>C, Arduino, modélisation UML</p>
+      <p>Microcontrôleur,Arduino /Capteurs,asembleur,architectureHarvard,mémoire /pile,modélisation algorithmique(UML)</p>
     </div>
     <div class="interest-card">
       <h4>💻 Programmation</h4>
-      <p>C++, Python, HTML,JavaScript,PHP, REST/WS</p>
+      <p>C,C++, Python, HTML, JavaScript, PHP,programmation objet,STL,Design patterns,Structures de</p>
     </div>
     <div class="interest-card">
       <h4>🎨 Design</h4>
-      <p>Fusion 360, Canva,Visual Paradigm</p>
+      <p>Fusion 360, Canva, Visual Paradigm,HTML/CSS,SEO,Interface utilisateur,UX / UI design</p>
     </div>
   <div class="interest-card">
       <h4>🔧Outils & DevOps</h4>
-      <p>GitHub,Netifly,MicrosoftOffice,Teams,Google Scripts</p>
+      <p>Visual Studio Code,Hébergement (Azure,GitHub),maintenance ,Teams, Google Scripts,Bash /Automatisation,Apache / Serveur web</p>
      </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
-      <p>Codage/décodage, ondes</p>
+      <p>Arduino UNO,Communicationcapteurs,Traitementd’interruptions,Codage/décodage,Filtrage,Conversionanalogique/numérique,Analyse fréquentielle</p>
     </div>
 
   </div>
