--- a/index.html
+++ b/index.html
@@ -753,7 +753,8 @@ ul li {
      </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
-      <p>Arduino UNO,Communicationcapteurs,Traitementd’interruptions,Codage/décodage,Filtrage,Conversionanalogique/numérique,Analyse fréquentielle</p>
+      <p>Arduino UNO,Communicationcapteurs,Traitementd’interruptions,Codage/décodage,
+        Filtrage,Conversionanalogique/numérique,Analyse fréquentielle</p>
     </div>
 
   </div>
