--- a/index.html
+++ b/index.html
@@ -753,7 +753,11 @@ ul li {
      </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
-      <p>Arduino UNO,Communicationcapteurs,Traitementd’interruptions,Codage/décodage</p>
+      <p>Arduino UNO,Communicationcapteurs,Traitementd’interruptions,
+        Codage/décodage
+      Filtrage,Conversion
+analogique/numérique,Analyse
+fréquentielle</p>
     </div>
 
   </div>
