--- a/index.html
+++ b/index.html
@@ -729,7 +729,10 @@ ul li {
   <div class="section-grid">
     <div class="interest-card">
       <h4>🔒 Cybersécurité,Réseaux & Infrastructures</h4>
-      <p>Modèle OSI/TCP-IP,DNS/DHCP/ICMP, IPv4/IPv6,VLAN/NAT/PAT,authentification,sécurisation des accès,routage / commutation,WiFi /Ethernet, Pare-feu / Filtrage,,analyse de vulnérabilités,aopologie réseau ,Windows, Linux, macOS, Android</p>
+      <p>Modèle OSI/TCP-IP,DNS/DHCP/ICMP, IPv4/IPv6,VLAN/NAT/PAT,
+        authentification,sécurisation des accès,routage / commutation,WiFi /Ethernet, 
+        Pare-feu / Filtrage,,analyse de vulnérabilités,aopologie réseau ,Windows, Linux, 
+        macOS, Android</p>
     </div>
     <div class="interest-card">
       <h4>💾 Base de données</h4>
@@ -737,7 +740,9 @@ ul li {
     </div>
     <div class="interest-card">
       <h4>⚡ Systèmes embarqués</h4>
-      <p>Microcontrôleur,Arduino /Capteurs,asembleur,architectureHarvard,mémoire /pile,modélisation algorithmique(UML)</p>
+      <p>Microcontrôleur,Arduino /Capteurs,asembleur,
+        architecture Harvard,
+        mémoire /pile,modélisation algorithmique(UML)</p>
     </div>
     <div class="interest-card">
       <h4>💻 Programmation</h4>
