--- a/index.html
+++ b/index.html
@@ -758,7 +758,8 @@ ul li {
      </div>
     <div class="interest-card">
       <h4>📡 IoT & Signaux</h4>
-      <p>Arduino UNO,Communicationcapteurs,Traitementd’interruptions,
+      <p>Arduino UNO,Communication capteurs,
+        Traitement d’interruptions,
         Codage/décodage
       Filtrage,Conversion
 analogique/numérique,Analyse
