--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ ul li {
     </div>
     <div class="interest-card">
       <h4>💻 Programmation</h4>
-      <p>C,C++, Python, HTML, JavaScript, PHP,programmation objet,STL,Design patterns,Structures de</p>
+      <p>C,C++, Python, HTML, JavaScript, PHP,programmation objet,STL,Design patterns,Structures de données</p>
     </div>
     <div class="interest-card">
       <h4>🎨 Design</h4>
