--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ fréquentielle</p>
                 <div class="stat-card">
                     <div class="stat-number">💼</div>
                     <h4>Compétences Techniques</h4>
-                    <p>MySQL, Arduino, C++/Python, HTML, Fusion 360</p>
+                    <p>MySQL,Réseaux systèmes & sécurité, C++/Python, HTML, Fusion 360</p>
                     <small>Expertise en base de données et IoT</small>
                 </div>
                <div class="stat-card">
